# leancall

./: .gitignore  AGENTS.md  README.md  example.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/codylib/: __init__.py  leanfun.py  numpy.py
src/leancall/: __init__.py  expr.py  ffi.py  leanfun.py  numpy.py
tests/: test_expr.py  test_ffi.py  test_leanfun.py  test_readme_examples.py
tests/fixtures/: lean_ids.lean
