[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["lark>=1.3.1", "lean-interact>=0.10.5"]


[tool.hatchling.build]
packages = ["src/codylib"]

[dependency-groups]
dev = ["hypothesis>=6.150.2", "pytest>=9.0.2"]
